adding notes pages for hc3

--- a/app/views/lis/5/exemption/hc3-sight-notes.html
+++ b/app/views/lis/5/exemption/hc3-sight-notes.html
@@ -26,11 +26,11 @@
           <div class="text">
   <a class="back-link" href="hc3certificate">Back </a>
   <h2 class="heading-large">Sight tests</h2>
-  <p>Show this certificate to the person who tests your sight and ask if you are entitled to any help with the cost.<br>
-  <br>If you are, ask for a form to apply for this help. You then pay whichever is less:
+  <p>Show this certificate to the person who tests your sight and ask if you are entitled to any help with the cost.</p>
+  <p>If you are, ask for a form to apply for this help. You then pay whichever is less:</p>
     <li>the amount specified on your certificate, plus any difference between the NHS fee and the private sight test cost, or</li>
-    <li>the actual sight test cost.</li><br>
-  The person who tests your sight can tell you how much the NHS sight test fee is. <strong>Eye examinations are free to all in Scotland</strong>
+    <li>the actual sight test cost.</li>
+  <p>The person who tests your sight can tell you how much the NHS sight test fee is. <strong>Eye examinations are free to all in Scotland</strong>
   </p> 
   </div>
   </div>
