--- a/app/views/lis/5/exemption/hc3certificate.html
+++ b/app/views/lis/5/exemption/hc3certificate.html
@@ -39,19 +39,19 @@
   <hr>
   <ul class="cert-des">
     <li class="medium strong ex-type">Glasses or contact lenses</li>
-    <li>Towards an optical voucher, you pay: <br><br><a href="#">How to use this</a></li>
+    <li>Towards an optical voucher, you pay: <br><br><a href="hc3-glasses-notes">How to use this</a></li>
     <li class="cost">£71.44</li> 
   </ul>
   <hr>
   <ul class="cert-des">
     <li class="medium strong ex-type">Travel to receive NHS treatment</li>
-    <li>In any one week, you pay: <br><br><a href="#">How to use this</a></li>
+    <li>In any one week, you pay: <br><br><a href="hc3-travel-notes">How to use this</a></li>
     <li class="cost">£35.72</li> 
   </ul>
   <hr>
   <ul class="cert-des">
     <li class="medium strong ex-type">NHS dental treatment, wigs, or fabric supports</li>
-    <li>Per course of treatment or prescribed item,<br> you pay a maximum of: <br><br><a href="#">How to use this</a></li>
+    <li>Per course of treatment or prescribed item,<br> you pay a maximum of: <br><br><a href="hc3-dental-notes">How to use this</a></li>
     <li class="cost">£107.16</li> 
   </ul>
   </div>
@@ -67,7 +67,7 @@
       <p><a href="hc3email">Email</a> it to me</p>
       <p><a href="/public/images/hc3.pdf" target="blank">Download</a> it to my device</p>
       <p><a href="#">Print</a> it for my records</p>
-            <details>
+      <details>
         <summary><span class="summary">I can't access my certificate</span></summary>
         <div class="panel panel-border-narrow">
           <p>
@@ -75,6 +75,24 @@
           </p>
         </div>
       </details>
+          <hr>
+  
+      <p><a href="#">How did we calculate this?</a></p>
+
+    <!--<ul class="list list-bullet">
+    <li>£xx income</li>
+    <li>£xx outgoings</li>
+    <li>£xx remaining</li>
+  </ul>
+  
+  <p>This has been calculated based on the amounts you told us during the application. Your certificate will tell you the exact amounts you will be able to claim.</p>
+  
+  <p class="lede intro">Your exemption will cover:</p>
+  
+  <ul class="list list-bullet">
+    <li>Priya and Vinay Mattu</li>
+  </ul>-->
+
       </div>
   </div>
   </div>
