adding new exemption page

--- a/app/views/lis/5/part-help.html
+++ b/app/views/lis/5/part-help.html
@@ -35,7 +35,7 @@
   </ul>
   
   <p>
-    <a class="button" href="exemption/hc3certificate">Get your certificate</a>
+    <a class="button" href="exemption/certificate">Get your certificate</a>
   </p>
 
   
