--- a/app/views/lis/5/exemption/certificate.html
+++ b/app/views/lis/5/exemption/certificate.html
@@ -69,9 +69,9 @@
       <br>Vinay Mattu</h3>
 
       <p class="smaller-text">Certificate number<br></p>
-      <span class="larger-text">123 456 789</span>
-      <br><br>
-      <p class="smaller-text">Valid dates</p>
+      <span class="larger-text">123 456 789</span><br>
+      
+      <br><p class="smaller-text">Valid dates</p>
       <p><span class="smaller-text date-text"">from:</span> <span class="larger-text">14 July 2015</span>
       <br><span class="smaller-text date-text">to:</span> <span class="larger-text">14 August 2016</span></p>
       <br>
