changes to cert management page

--- a/app/views/lis/5/exemption/certificate.html
+++ b/app/views/lis/5/exemption/certificate.html
@@ -23,37 +23,37 @@
   <div class="column-two-thirds cert-col">
   <ul class="cert-des">
     <li class="medium strong ex-type">Prescriptions</li>
-    <li><strong>This does not entitle you to free prescriptions</strong></li>
+    <li><strong><p class="smaller-text">This certificate does not entitle you to free prescriptions</p></strong></li>
   </ul>
 
   <ul class="cert-des">
     <li class="medium strong ex-type">Sight tests</li>
-    <li>You pay a maximum of:</li>
-    <li class="cost-amount">£35.72</li>
+    <li><p class="small-text">Towards a private sight test, you pay a maximum of:</p></li>
+    <li class="cost-amount">£5.10</li>
   </ul>
 
   <ul class="cert-des">
     <li class="medium strong ex-type">Glasses or contact lenses</li>
-    <li>Towards an optical voucher, you pay:</li>
-    <li class="cost-amount">£71.44</li> 
+    <li><p class="small-text">Towards an optical voucher, you pay:</p></li>
+    <li class="cost-amount">£10.20</li> 
   </ul>
 
   <ul class="cert-des">
     <li class="medium strong ex-type">Travel to receive NHS treatment</li>
-    <li>In any one week, you pay:</li>
-    <li class="cost-amount">£35.72</li> 
+    <li><p class="small-text">Towards travel, in one week you pay:</p></li>
+    <li class="cost-amount">£5.10</li> 
   </ul>
 
   <ul class="cert-des">
     <li class="medium strong ex-type">NHS dental treatment</li>
-    <li>Per course of treatment<br>you pay a maximum of:</li>
-    <li class="cost-amount">£107.16</li> 
+    <li><p class="small-text">Per course of treatment, you pay a maximum of:</p></li>
+    <li class="cost-amount">£15.30</li> 
   </ul>
 
   <ul class="cert-des">
-    <li class="medium strong ex-type">Wigs or fabric supports</li>
-    <li>Per prescribed item,<br> you pay a maximum of:</li>
-    <li class="cost-amount">£35.72</li> 
+    <li class="medium strong ex-type">NHS wigs or NHS fabric supports</li>
+    <li><p class="small-text">Per prescribed item, you pay a maximum of:</p></li>
+    <li class="cost-amount">15.30</li> 
   </ul>
   <br>
 
