--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -470,6 +470,11 @@ tr.clickable-row { cursor: pointer; }
   font-size:0.8em;
 }
 
+.small-text {
+  font-size:0.8em;
+  line-height: 0.8;
+}
+
 .larger-text {
   font-size:1.6em;
   font-weight: bold;
