changes to cert management page

--- a/app/views/sprint5.html
+++ b/app/views/sprint5.html
@@ -20,9 +20,10 @@
 
   <h2 class="heading-large">Exemption prototypes</h2>
   <ul>
-    <li><a href="/lis/5/exemption/hc2certificate">HC2 Certificate</a></li>  
-    <li><a href="/lis/5/exemption/hc3certificate">HC3 Certificate</a></li>
-    <li><a href="/lis/5/exemption/email">Email Certificate</a></li>
+    <li><a href="/lis/5/exemption/certificate">Exemption management page</a></li>  
+    <li><a href="/lis/5/exemption/hc2certificate">HC2 certificate</a></li>  
+    <li><a href="/lis/5/exemption/hc3certificate">HC3 certificate</a></li>
+    <li><a href="/lis/5/exemption/email">Email certificate</a></li>
   </ul>
 
   <ul>
