changes to cert management page

--- a/app/views/lis/5/exemption/certificate.html
+++ b/app/views/lis/5/exemption/certificate.html
@@ -16,7 +16,7 @@
       <p>You will need to show a copy of this information whenever you want to use it.</p>
       <ul>
         <li><a href="#">Print this</a></li>
-        <li><a href="/public/images/hc3.pdf">Download a PDF (98kb)</a></li>
+        <li><a href="/public/images/hc3.pdf" target="blank">Download a PDF (98kb)</a></li>
         <li><a href="hc3email">Email me a copy</a></li>
       </ul>
       <br>
@@ -81,7 +81,7 @@
       <div class="second-cert-block">
       <h3 class="heading-medium">Get help with this</h3>
       <p><a href="#">How do I use this certificate?</a>
-      <br><a href="#"">How has this been worked out?</a>
+      <br><a href="/public/images/breakdown.pdf" target="blank">How has this been worked out?</a>
       <br><a href="#">I can't print or download my certificate</a></p>
       </div>
 
