fixed issue with does anyone live page

--- a/app/views/lis/5/signin.html
+++ b/app/views/lis/5/signin.html
@@ -35,7 +35,7 @@
     {{
       form_macros.button({
         label: 'Next',
-        href: 'lis-home'
+        href: 'exemption/certificate'
       })
     }}
     
