added the ability to skip council tax

--- a/app/views/lis/5/live/services.html
+++ b/app/views/lis/5/live/services.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you pay for any of the following where you live?
+      Do you pay any of the following service charges where you live?
   </h1>
       
       <p>Tick all that apply</p>
@@ -23,25 +23,19 @@
       <div class="form-group">
         <input type="checkbox" id="management" name="services">
         <label class="form-control-checkbox" for="management">
-          Maintenance, management or cleaning of communal areas, gardens or grounds
+          Maintenance of communal areas
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="laundry" name="services">
         <label class="form-control-checkbox" for="laundry">
-          The provision of laundry premises or equipment
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="play" name="services">
-        <label class="form-control-checkbox" for="play">
-          Children's play areas
+          Laundry premises or equipment
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="sheltered" name="services">
         <label class="form-control-checkbox" for="sheltered">
-          A warden in sheltered accommodation
+          A warden service
         </label>
       </div>
       <div class="form-group">
