if the other person in the home is over 19 they are asked if they are on full time education not what level they are studtying at

--- a/app/views/lis/5/live/living-summary.html
+++ b/app/views/lis/5/live/living-summary.html
@@ -117,7 +117,7 @@
       <tr>
         <td>Are they in full time education?</td>
         <td>No</td>
-        <td><a href="others/education">Change this</a></td>
+        <td><a href="others/alevel">Change this</a></td>
       </tr>
       <tr>
         <td>Do they receive any of the following?</td>
