added the first change of circumstances page

--- a/app/views/lis/5/exemption/certificate.html
+++ b/app/views/lis/5/exemption/certificate.html
@@ -53,7 +53,7 @@
   <ul class="cert-des">
     <li class="medium strong ex-type">NHS wigs or NHS fabric supports</li>
     <li><p class="small-text">Per prescribed item, you pay a maximum of:</p></li>
-    <li class="cost-amount">15.30</li> 
+    <li class="cost-amount">£15.30</li> 
   </ul>
   <br>
 
@@ -75,7 +75,7 @@
       <p><span class="smaller-text date-text"">from:</span> <span class="larger-text">14 July 2015</span>
       <br><span class="smaller-text date-text">to:</span> <span class="larger-text">14 August 2016</span></p>
       <br>
-      <p class="smaller-text"><a href="#">Update your details or tell us your circumstances have changed</a></p>
+      <p class="smaller-text"><a href="../change-of-circs">Update your details or tell us your circumstances have changed</a></p>
       </div>
 
       <div class="second-cert-block">
