--- a/app/views/sprint5.html
+++ b/app/views/sprint5.html
@@ -25,13 +25,15 @@
     <li><a href="/lis/5/exemption/hc3certificate">HC3 certificate</a></li>
     <li><a href="/lis/5/exemption/email">Email certificate</a></li>
   </ul>
-
+  
   <ul>
-    <li><span class="strong">What we plan to test:</span> </li>
+    <li><span class="strong">What we're improving this sprint:</span> </li>
+    <li>Edited the journey for people living at home who are in education.</li>
   </ul>
 
   <ul>
-    <li><span class="strong">What we're improving this sprint:</span> </li>
+    <li><span class="strong">What we plan to test:</span> </li>
+    <li>Updated exemption pages and journey.</li>
   </ul>
 
   <ul>
