--- a/app/views/lis/5/you/pension/employment-pension-amount.html
+++ b/app/views/lis/5/you/pension/employment-pension-amount.html
@@ -18,7 +18,7 @@
   
   <h2 class="heading-medium">How often do you receive your employment pension payments?</h2>
   
-  <form action="" method="get" class="form">
+  <form action="employment-pension-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
@@ -84,7 +84,6 @@
     
     {{
       form_macros.button({
-        href: 'pension-credit',
         label: 'Save and continue'
       })
     }}
