--- a/app/views/lis/5/partner/pension/pension-amount.html
+++ b/app/views/lis/5/partner/pension/pension-amount.html
@@ -27,30 +27,30 @@
           Every week
         </label>
       </div>
-      <div class="form-group">
+      <!--div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio" for="fortnight">
           Every two weeks
         </label>
-      </div>
+      </div-->
       <div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio" for="fourweekly">
          Every four weeks
         </label>
       </div>
-      <div class="form-group">
+      <!--div class="form-group">
         <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
          Every month
         </label>
-      </div>
-      <div class="form-group">
+      </div-->
+      <!--div class="form-group">
         <input type="radio" id="year" name="minor">
         <label class="form-control-radio" for="year">
           Annually
         </label>
-      </div>
+      </div-->
       
     {{
       form_macros.amount_field({
@@ -66,8 +66,10 @@
         label: 'Save and continue'
       })
     }}
+    
     <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
-  </form>
+  
+      </form>
     </div>
     </div>
 </main>
