--- a/app/views/lis/5/save-continue/code.html
+++ b/app/views/lis/5/save-continue/code.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Enter the reference number we sent to the number ending in 123
+    Enter the access code we sent to the number ending in 475
   </h1>
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
@@ -24,13 +24,14 @@
           </fieldset>
         </div>
         
-            {{
-              form_macros.button({
-                label: 'Next',
-                href: 'success'
-              })
-            }}
-            <p class="navigation"><a class="cancel" href="">I didn't receive a code</a></p>
+        {{
+          form_macros.button({
+            label: 'Next',
+            href: 'success'
+          })
+        }}
+        
+        <p class="navigation"><a class="cancel" href="">I didn't receive a code</a></p>
 
   </form>
     </div>
