--- a/app/views/lis/5/you/pension/pension-type.html
+++ b/app/views/lis/5/you/pension/pension-type.html
@@ -39,14 +39,14 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="war-disablement" value="war-disablement" name="pensiontype">
-        <label class="form-control-checkbox" for="war-disablement">
+        <input type="checkbox" id="wardisablement" value="wardisablement" name="pensiontype">
+        <label class="form-control-checkbox" for="wardisablement">
           War disablement pension 
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="war-widow" value="war-widow" name="pensiontype">
-        <label class="form-control-checkbox" for="war-widow">
+        <input type="checkbox" id="warwidow" value="warwidow" name="pensiontype">
+        <label class="form-control-checkbox" for="warwidow">
           War widow’s pension
         </label>
       </div>
