--- a/app/views/lis/5/you/pension/war-widow-pension.html
+++ b/app/views/lis/5/you/pension/war-widow-pension.html
@@ -17,7 +17,7 @@
         About your war widow pension
       </h1>
   
-      <h2 class="heading-medium">How often do you receive your payments?</h2>
+      <h2 class="heading-medium">How often do you receive your war widow pension payments?</h2>
   
       <form action="war-pension-handler" method="get" class="form">
 
