added links to hc2 and hc3 fro print and download

--- a/app/views/lis/6/exemption/hc2-entitlement.html
+++ b/app/views/lis/6/exemption/hc2-entitlement.html
@@ -12,47 +12,40 @@
   <div class="grid-row">
     
     <div class="column-two-thirds">
-      <h1 class="heading-large">Entitlement to help with health costs<br>(HC3 certificate)</h1>
+      <h1 class="heading-large">Entitlement to help with health costs<br>(HC2 certificate)</h1>
       <h2 class="heading-medium">What you’re entitled to</h2>
       
       <div class="entitlement">
-        <h4 class="heading-small">Prescriptions</h4>
-        <p class="description">This certificate does not entitle you to free prescriptions.</p>
+        <h4 class="heading-small">Free prescriptions</h4>
+        <p class="description">To claim, show a copy of this to the staff in the pharmacy.</p>
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">Sight tests</h4>
-        <p class="description">Towards a private sight test, you pay a maximum of:</p>	
-        <p class="heading-medium">£5.10</p>
-        <a href="">How to use this certificate for sight tests</a>
+        <h4 class="heading-small">Free sight tests</h4>
+        <p class="description">To claim, show a copy of this to the staff in the opticians.</p>	
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">Glasses or contact lenses</h4>
-        <p class="description">Towards an optical voucher, you pay:</p>	
-        <p class="heading-medium">£5.10</p>
+        <h4 class="heading-small">Full or partial help towards glasses or contact lenses</h4>
+        <p class="description">You are entitled to the full value of an optical voucher</p>	
         <a href="">How to use this certificate for glasses or contact lenses</a>
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">NHS dental treatment</h4>
-        <p class="description">Per course of treatment, you pay a maximum of:</p>	
-        <p class="heading-medium">£5.10</p>
-        <a href="">How to use this certificate for dental treatment</a>
+        <h4 class="heading-small">Free NHS dental treatment</h4>
+        <p class="description">To claim, show a copy of this to the staff in the dentist.</p>	
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">Travel to receive NHS treatment</h4>
-        <p class="description">Towards travel, in a week you pay:</p>	
-        <p class="heading-medium">£5.10</p>
+        <h4 class="heading-small">Refund of necessary travel costs to receive NHS treatment</h4>
         <a href="">How to use this certificate for travel</a>
       </div>
       
       <div class="entitlement">
-        <h4 class="heading-small">NHS Wigs, or NHS fabric supports</h4>
-        <p class="description">Per prescribed item you pay a maximum of:</p>	
-        <p class="heading-medium">£15.30</p>
-        <a href="">How to use this certificate for wigs or fabric supports</a>
+        <h4 class="heading-small">Free NHS Wigs, or NHS fabric supports</h4>
+        <p class="description">
+          To claim, show a copy of this to the person who fits the NHS wig or fabric support for you.
+        </p>	
       </div>
       
       <div class="details">
@@ -64,11 +57,11 @@
         <h2 class="heading-medium bignumbers"><span>to:</span> 14 August 2016</h2> 
       </div>
       
-      <div class="panel panel-border-wide">
+      <!--div class="panel panel-border-wide">
         <p>
           This certificate does not affect any entitlement to help you already have, for example if you already get help because of your age or a medical condition.
         </p>
-      </div>
+      </div-->
       
     </div>
     
@@ -86,18 +79,14 @@
           <h3 class="heading-medium">Save a copy</h3>
           <p>You will need to show a copy of this information whenever you want to use it.</p>
           <ul>
-            <li><a href="#">Print this</a></li>
-            <li><a href="#">Download this (PDF 98k)</a></li>
-            <li><a href="#">Get this by email</a></li>
-            <li><a href="#">I need help getting a copy</a></li>
+            <li><a href="javascript:window.print();">Print this</a></li>
+            <li><a href="/public/images/hc2.pdf" target="_blank">Download this (PDF 98k)</a></li>
+            <li><a href="email-me?helplevel=2">Get this sent by email</a></li>
+            <li><a href="post?helplevel=2">I need help getting a copy</a></li>
           </ul>
         </div>
         
         <div>
-          <h3 class="heading-small">How was this worked out</h3>
-          <ul>
-            <li><a href="#">View a breakdown of how we worked out your entitlement</a></li>
-          </ul>
           <h3 class="heading-small">Change your details</h3>
           <ul>
             <li><a href="#">Change your details or tell us your circumstances have changed.</a></li>
