--- a/app/views/lis/6/full-help.html
+++ b/app/views/lis/6/full-help.html
@@ -10,46 +10,44 @@
   
   <div class="done-panel">
     <h2 class="heading-large"><span id="done-tick"> </span>Application complete</h2>
-    <h1 class="heading-xlarge">You can get full help with help costs</h1>
-    <h4 class="heading-small">Your reference number is</h4>
-    <h2 class="heading-large">123 456 789</h2>
-    <h4 class="heading-small">Your certificate expires on 01 June 2018</h4>
+    <h1 class="heading-xlarge">You can get full help with health costs</h1>
+    <h4 class="heading-small">Your application number is</h4>
+    <h2 class="heading-large">1Q3 4T6 7K9</h2>
   </div>
   
-  <ul>
-    <li>A copy of your certificate has been emailed to bill.smith@inter.net</li>
-    <li><a href=#>Print my certificate</a></li>
-    <li><a href=#>Download my certificate</a></li>
-    <li>You can access a copy of your certificate at any time by signing into this service.<br>
-      If you have no access to a printer or this is not your own computer we can <a href=#>send a copy in the post</a>.</li>
-  </ul>
-  
-  <hr>
-  
-  <p class="lede">Your certificate will allow you to claim:</p>
+  <div class="grid-row">
+    
+    <div class="column-two-thirds">
+      <h2 class="heading-medium">Next Steps</h2>
+      <p>You can download or print a copy of your certificate at any time by signing into this service, using your application number and memorable word.</p>
+      <!--
+      <ul>
+        <li>A copy of your certificate has been emailed to <a href="../5/exemption/hc3email">m.smith@inter.net</a></li>
+        <li><a href="exemption/hc3certificate">View my certificate</a></li>
+        <li><a href="/public/images/hc3.pdf" target="blank">Download my certificate</a></li>
+        
+        <li>      
+          <details>
+            <summary><span class="summary">I can't access my certificate</span></summary>
+            <div class="panel panel-border-narrow">
+              <p>
+                If you don't have access to a printer or this is not your own computer we can <a href=#>send a copy in the post</a>
+              </p>
+            </div>
+          </details>
+        </li>
 
-  <ul class="list list-bullet">
-    <li>free NHS prescriptions</li>
-    <li>free NHS dental treatment</li>
-    <li>free NHS sight tests</li>
-    <li>free NHS wigs and fabric supports</li>
-    <li>the full value of a voucher towards the cost of glasses and contact lenses</li>
-    <li>refund of necessary travel costs to receive NHS treatment</li>
-  </ul>
-  
-  <p>You will need to show a copy of your certificate if you want to claim any of the above.</p>
-  
-  <p class="lede intro">Your certificate covers:</p>
-  
-  <ul class="list list-bullet">
-    <li>Bill Smith</li>
-  </ul>
+      </ul>
+      -->
+      
+    </div>
+    
+  </div>
   
   <p>
-    <a class="button" href="#">Finished</a>
+    <a class="button" href="exemption/hc2-entitlement">View your entitlement</a>
   </p>
-  
+
 </main>
 
 {% endblock %}
-
