--- a/app/views/lis/6/lis-home.html
+++ b/app/views/lis/6/lis-home.html
@@ -26,7 +26,7 @@
             <a href="you/registration">{{aboutYouLink}}</a></td>
           </tr>
           <tr class='clickable-row' data-href='partner/partner'>
-            <td>About your partner</td>
+            <td>Partner status</td>
             <td><span id="about_partner_status" class="notstarted-text">{{aboutPartnerStatus}}</span> 
             <a href="partner/partner">{{aboutPartnerLink}}</a></td>
           </tr>
@@ -44,7 +44,7 @@
         
         <div class="panel panel-border-wide">
           <p>
-            You can submit your application here once you have answered all of the questions above.
+            You can submit your application here once you have answered all of the sections above.
           </p>
         </div>
   
