--- a/app/views/lis/6/part-help.html
+++ b/app/views/lis/6/part-help.html
@@ -45,7 +45,7 @@
   </div>
   
   <p>
-    <a class="button" href="exemption/certificate">Get your certificate</a>
+    <a class="button" href="exemption/hc3-entitlement">View your entitlement</a>
   </p>
 
 </main>
