--- a/app/views/sprint6.html
+++ b/app/views/sprint6.html
@@ -13,14 +13,16 @@
   <ul>
     <li><a href="/lis/6/index">Start page</a></li>
     <li><a href="/lis/6/lis-home">My lis home page</a></li>
-    <li><a href="/lis/6/part-help">Part help outcome</a></li>
     <li><a href="/lis/6/live/others/people">Does anyone else live in your home?</a></li>
+    <li><a href="/lis/6/part-help">Part help outcome</a></li>
+    <li><a href="/lis/6/full-help">Full help outcome</a></li>
     <!--li><a href="/lis/6/register/user-id">Save and restore version A</a></li-->
   </ul>
 
   <h2 class="heading-large">Exemption prototypes</h2>
   <ul>
-    <li><a href="/lis/6/exemption/hc3-home">Exemption management page</a></li>  
+    <li><a href="/lis/6/exemption/hc3-entitlement">HC3 entitlement management page</a></li>  
+    <li><a href="/lis/6/exemption/hc2-entitlement">HC2 entitlement management page</a></li>  
     <!--li><a href="/lis/6/exemption/certificate">Exemption management page</a></li-->  
     <!--li><a href="/lis/6/exemption/hc2certificate">HC2 certificate</a></li-->  
     <!--li><a href="/lis/6/exemption/hc3certificate">HC3 certificate</a></li-->
