added the breakdown page and started setting it up needs css added

--- a/app/views/lis/6/exemption/hc3-entitlement.html
+++ b/app/views/lis/6/exemption/hc3-entitlement.html
@@ -96,7 +96,7 @@
         <div>
           <h3 class="heading-small">How was this worked out</h3>
           <ul>
-            <li><a href="#">View a breakdown of how we worked out your entitlement</a></li>
+            <li><a href="hc3-breakdown">View a breakdown of how we worked out your entitlement</a></li>
           </ul>
           <h3 class="heading-small">Change your details</h3>
           <ul>
