--- a/app/views/sprint6.html
+++ b/app/views/sprint6.html
@@ -23,6 +23,7 @@
   <ul>
     <li><a href="/lis/6/exemption/hc3-entitlement">HC3 entitlement management page</a></li>  
     <li><a href="/lis/6/exemption/hc2-entitlement">HC2 entitlement management page</a></li>  
+    <li><a href="/lis/6/exemption/hc3-breakdown">HC3 breakdown page</a></li>  
     <!--li><a href="/lis/6/exemption/certificate">Exemption management page</a></li-->  
     <!--li><a href="/lis/6/exemption/hc2certificate">HC2 certificate</a></li-->  
     <!--li><a href="/lis/6/exemption/hc3certificate">HC3 certificate</a></li-->
