--- a/app/views/lis/6/exemption/hc3-breakdown.html
+++ b/app/views/lis/6/exemption/hc3-breakdown.html
@@ -42,7 +42,7 @@
           <td>Housing costs (rent or mortgage)</td>
           <td>£90.00</td>
         </tr>
-        <tr>
+        <tr class="bold">
           <td>Total amount needed each week</td>
           <td>£374.69</td>
         </tr>
@@ -69,16 +69,20 @@
           <td>Occupational pension</td>	
           <td>£82.06</td>
         </tr>
-        <tr>
+        <tr class="bold">
           <td>Total weekly income</td>	
           <td>£390.03</td>
         </tr>
       </table>
-      <p><a href="">Tell us if your income is now lower or these amounts are wrong</a></p>           
-      <p>We subtract your weekly income from the money you need each week</p>    
+      <p><a href="">Tell us if your income is now lower or these amounts are wrong</a></p>      
+            
+      <h2 class="heading-medium">Final amount</h2>
+      
+      <p>We subtract the money you need each week from your weekly income</p>    
+      
       <table class="breakdown">
-        <tr>
-          <td>Excess income each week</td>	
+        <tr class="bold">
+          <td>Total left each week</td>	
           <td>£5.10 </td>
         </tr>
       </table>
