link fix, list of people you have told us about so far, contact method help

--- a/app/views/lis/6/live/joint.html
+++ b/app/views/lis/6/live/joint.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    {{jointtennanttext}}
+    Is anyone else other than your partner a joint tenant of the place you live?
   </h1>
-      <p></p>
+      <p>Test</p>
   
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
