--- a/app/views/lis/6/live/other-people-test.html
+++ b/app/views/lis/6/live/other-people-test.html
@@ -13,9 +13,16 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Is this your partner's final or only year?
+   Does anyone else live in your home with you?
   </h1>
-
+        <div class="panel panel-border-wide">
+      <p>So far you've told us about:</p>
+            <ul class="list list-bullet">
+            <li>Sam Smith</li>
+            <li>Tom Jones</li>
+            </ul>
+        </div>
+  
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
@@ -38,12 +45,12 @@
     
         {{
       form_macros.button({
-        href: 'tuition-fees',
+        href: 'address',
         label: 'Save and continue'
       })
     }}
         
-    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
 
   </form>
     </div>
