--- a/app/views/lis/6/live/others/alevel.html
+++ b/app/views/lis/6/live/others/alevel.html
@@ -45,7 +45,7 @@
             })
           }}
 
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
 
       </form>
       
