--- a/app/views/lis/6/live/others/boarder-includes.html
+++ b/app/views/lis/6/live/others/boarder-includes.html
@@ -45,8 +45,7 @@
       })  
     }}
           </div>
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
-  </form>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
     </div>
     </div>
 </main>
