--- a/app/views/lis/6/live/others/relationship.html
+++ b/app/views/lis/6/live/others/relationship.html
@@ -65,7 +65,7 @@
 
     </div>  
         
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
   </form>
     </div>
     </div>
