--- a/app/views/lis/6/live/others/subtenant.html
+++ b/app/views/lis/6/live/others/subtenant.html
@@ -44,7 +44,7 @@
         }}
         <!--note: tennants may take in borders or lodgers under some curcumstances-->
 
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+   <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
 
       </form>
       
