--- a/app/views/lis/6/partner/course.html
+++ b/app/views/lis/6/partner/course.html
@@ -39,7 +39,7 @@
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
 
   </form>
     </div>
