--- a/app/views/lis/6/you/contact-prefs-test.html
+++ b/app/views/lis/6/you/contact-prefs-test.html
@@ -15,9 +15,11 @@
       <h1 class="heading-large">
         Which is your prefered method of contact?
       </h1>
+        <p class="form-hint">Should we need to correct or clarify any of the details you have provided.</p>
   <form action="" method="get" class="form">
-
+<div class="form-item-wrapper">
     <div class="form-group">
+        
       <input type="radio" id="email" name="contact" value="email">
       <label class="form-control-radio minor-radio" for="email">
         vinay.mattu@inter.net
@@ -34,6 +36,7 @@
       <label class="form-control-radio minor-radio" for="mobile">
         07123 456 789
       </label>
+        </div>
     </div>
     {{
       form_macros.button({
