swapped the pen credit question order

--- a/app/views/lis/6/partner/pension/credit-amount.html
+++ b/app/views/lis/6/partner/pension/credit-amount.html
@@ -17,7 +17,7 @@
         About your partner's Pension Credit Savings Credit
       </h1>
   
-      <h2 class="heading-medium">How often does your partner receive their payments?</h2>
+      <h2 class="heading-medium">How often does your partner receive their Pension Credit Savings Credit payments?</h2>
   
       <form action="" method="get" class="form">
 
@@ -63,7 +63,7 @@
         {{
           form_macros.button({
             label: 'Save and continue',
-            href: '../benefits/benefit-sprint3'
+            href: 'pension-type'
           })
         }}
         
