--- a/app/views/lis/6/you/pension/war-widow-pension.html
+++ b/app/views/lis/6/you/pension/war-widow-pension.html
@@ -63,7 +63,7 @@
     {{
       form_macros.button({
         label: 'Save and continue',
-        href: 'pension-credit'
+        href: '../benefits/benefit-sprint3'
       })
     }}
     
