added the ability to add a list to a page

--- a/app/views/lis/6/live/others/name.html
+++ b/app/views/lis/6/live/others/name.html
@@ -22,14 +22,14 @@
 
     {{
       form_macros.text_field({
-        id: 'first-name',
+        id: 'firstname',
         label: 'First name'
       })
     }}
 
     {{
       form_macros.text_field({
-        id: 'last-name',
+        id: 'lastname',
         label: 'Last name'
       })
     }}
