--- a/app/views/lis/6/you/pension/credit-amount.html
+++ b/app/views/lis/6/you/pension/credit-amount.html
@@ -63,7 +63,7 @@
         {{
           form_macros.button({
             label: 'Save and continue',
-            href: '../benefits/pension-type'
+            href: '../pension/pension-type'
           })
         }}
         
