refactored routes.js

--- a/app/views/lis/0/you/education.html
+++ b/app/views/lis/0/you/education.html
@@ -39,7 +39,8 @@
 
           {{
             form_macros.button({
-              label: 'Save and continue'
+              label: 'Save and continue',
+              href : 'pension/pension'
             })
           }}
 
