--- a/app/views/lis/3/you/education.html
+++ b/app/views/lis/3/you/education.html
@@ -17,7 +17,7 @@
         Are you in full time education?
       </h1>
 
-      <form action="education-handler" method="get" class="form">
+      <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
@@ -39,7 +39,8 @@
 
           {{
             form_macros.button({
-              label: 'Save and continue'
+              label: 'Save and continue',
+              href : 'pension/pension'
             })
           }}
 
