--- a/app/views/lis/6/partner/education.html
+++ b/app/views/lis/6/partner/education.html
@@ -17,7 +17,7 @@
         Is your partner in full time education?
       </h1>
 
-      <form action="peducation-handler" method="get" class="form">
+      <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
