--- a/app/views/lis/6/you/about-you-summary.html
+++ b/app/views/lis/6/you/about-you-summary.html
@@ -31,7 +31,7 @@
       </tr>
       <tr>
         <td>Do you have a job?</td>
-        <td>{{myWork}}</td>
+        <td>{{mywork}}</td>
         <td><a href="work">Change this</a></td>
       </tr>
       <tr>
