--- a/app/views/lis/6/you/work.html
+++ b/app/views/lis/6/you/work.html
@@ -18,7 +18,7 @@
       
       <p class="form-hint">Include work for an employer, self employed work, and paid voluntary or charity work.</p>
       
-      <form action="work-handler" method="get" class="form">
+      <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
@@ -40,7 +40,8 @@
 
         {{
           form_macros.button({
-            label: 'Save and continue'
+            label: 'Save and continue',
+            href : 'education'
           })
         }}
 
