added the journey for someone living in someone else's home

--- a/app/views/lis/6/lis-home.html
+++ b/app/views/lis/6/lis-home.html
@@ -44,7 +44,7 @@
         
         <div class="panel panel-border-wide">
           <p>
-            You can submit your application here once you have answered all of the sections above.
+            You can submit your application here once you have completed all of the sections above.
           </p>
         </div>
   
