--- a/app/views/lis/6/save-continue/code.html
+++ b/app/views/lis/6/save-continue/code.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Enter the access code we sent to the number ending in 475
+    Enter the access code we sent to 07*** *** 775
   </h1>
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
@@ -27,7 +27,7 @@
         {{
           form_macros.button({
             label: 'Next',
-            href: 'success'
+            href: '../lis-home'
           })
         }}
         
