--- a/app/views/lis/6/guarantee-credit.html
+++ b/app/views/lis/6/guarantee-credit.html
@@ -14,8 +14,9 @@
 
   <h1 class="heading-large">
     Do you or your partner receive Pension Credit Guarantee Credit?
+    <span class="form-hint">This is a pension top up payment of up to £155.60 (for single people) or £237.55 (for couples).</span>
   </h1>  
-
+      
   <form action="guacredit-kickout-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
