--- a/app/views/lis/6/live/home.html
+++ b/app/views/lis/6/live/home.html
@@ -22,7 +22,7 @@
       <div class="form-group">
         <input type="radio" id="own" value="own" name="home">
         <label class="form-control-radio" for="own">
-          In a property I own (including mortgaged)
+          In a property I own (with or without a mortgage)
         </label>
       </div>
       <div class="form-group">
@@ -32,8 +32,8 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="else" value="else" name="home">
-        <label class="form-control-radio" for="else">
+        <input type="radio" id="guest" value="guest" name="home">
+        <label class="form-control-radio" for="guest">
           In someone else's home (for example friends, relatives, parents)
         </label>
       </div>
