--- a/app/views/lis/6/save-continue/2step.html
+++ b/app/views/lis/6/save-continue/2step.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Set up 2-step verification
+    Keep your details safe
   </h1>
   <p>To help keep your details safe we can send you an access code to your mobile phone or landline everytime you need to access this service.</p>
       
