--- a/app/views/lis/6/you/pension/pension-credit.html
+++ b/app/views/lis/6/you/pension/pension-credit.html
@@ -14,6 +14,7 @@
 
   <h1 class="heading-large">
       Do you receive Pension Credit Savings Credit?
+    <span class="form-hint">This is a pension top up of up to £13.07 per week (for single people) or up to £14.75 (for couples).</span>
   </h1>
 
   <form action="pencred-handler" method="get" class="form">
