--- a/app/views/lis/6/sc/address.html
+++ b/app/views/lis/6/sc/address.html
@@ -54,7 +54,7 @@
         
     {{
       form_macros.button({
-        href: 'declaration',
+        href: 'summary',
         label: 'Save and continue'
       })
     }}
