--- a/app/views/lis/6/you/contact-prefs-test.html
+++ b/app/views/lis/6/you/contact-prefs-test.html
@@ -15,7 +15,7 @@
       <h1 class="heading-large">
         Which is your prefered method of contact?
       </h1>
-        <p class="form-hint">Should we need to correct or clarify any of the details you have provided.</p>
+        <p class="form-hint">We'll only use this if we need you to clarify or correct your details.</p>
   <form action="" method="get" class="form">
 <div class="form-item-wrapper">
     <div class="form-group">
