--- a/app/views/lis/6/start-v2.html
+++ b/app/views/lis/6/start-v2.html
@@ -25,7 +25,7 @@
           <li>NHS wigs and fabric supports</li>
         </ul>
         
-        <p><strong>You can apply any time (not just when you need treatment) for:</strong></p>
+        <p>You can apply any time (not just when you need treatment) for:</p>
               
         <ul class="list list-bullet">
           <li>yourself</li>
@@ -39,6 +39,7 @@
         <a href="signin">I've used this service before - view my application</a>
           
               <h3 class="heading-medium" style="margin-top:40px">Before you start</h3>
+
         <h3 class="heading-small">You're not eligible for help if you or your partner (or both) have more than:</h3>
         
         <ul class="list list-bullet">
@@ -46,8 +47,10 @@
             <p>or</p>
             <li>£23,250 in savings, investments and properties <br><p class="form-hint">(if you permanently live in a care home)</p></li>
         </ul>
+          
+          <hr>
         
-        <h3 class="heading-small">You are already entitled to help (and don't need to complete this application) if you recieve:</h3>
+        <h3 class="heading-small">You're already entitled to help (and don't need to complete this application) if you recieve:</h3>
             
         <ul class="list list-bullet">
           <li>income support</li>
