--- a/app/views/lis/6/start-v5.html
+++ b/app/views/lis/6/start-v5.html
@@ -54,7 +54,7 @@
       <div class="column-third">
       <div style="margin-top:110px">
     
-        <h3 class="heading-small">You are already entitled to help (and don't need to complete this application) if you recieve:</h3>
+        <h3 class="heading-small">You're already entitled to help (and don't need to complete this application) if you recieve:</h3>
             
         <ul class="list list-bullet">
           <li>income support</li>
